# zephyr-learning

./: .gitignore  CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
.github/: copilot-instructions.md
boards/: esp32_devkitc_esp32_procpu.overlay
bootloader/mcuboot/boot/zephyr/arch/: esp32.c
drivers/: CMakeLists.txt  Kconfig
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/voltage_monitor/: CMakeLists.txt  Kconfig  README.md  vmon.dtsi  voltage_monitor.c
drivers/wifi_log/: CMakeLists.txt  Kconfig  wifi_log.c
dts/: partitions_4m.dtsi
dts/bindings/sensor/: app,voltage-monitor.yaml
include/app/: image_update.h  self_copy.h  slot_selector.h  wifi_log.h
lib/: CMakeLists.txt  Kconfig
src/: main.c
src/image_update/: image_update.c  self_copy.c  slot_selector.c
src/uart_comm/: uart_comm.c  uart_comm.h
support/: esp32_openocd.cfg
sysbuild/: CMakeLists.txt  mcuboot.conf  mcuboot.overlay
